# ansible-role-nexus_oss

./: .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
defaults/: main.yml
handlers/: main.yml
meta/: main.yml
molecule/all/: molecule.yml
molecule/default/: molecule.yml
molecule/resources/playbooks/: converge.yml  prepare.yml  verify.yml
tasks/: main.yml
templates/: nexus-oss.service.j2  nexus.properties.j2  nexus.vmoptions.j2
